Change datatable.html document title.

--- a/tests/datatable.html
+++ b/tests/datatable.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mithril Lightining</title>
+  <title>MLD - Datatable Tests</title>
 
   <link href="/design-system/assets/styles/salesforce-lightning-design-system.min.css" rel="stylesheet">
 </head>
