--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Teste</title>
 </head>
 <body>
-<h1>PentaCode Webpack</h1>
+<h1>Mithril Lightining</h1>
 
+<script src="http://localhost:8001/mithril.js"></script>
 <script src="dist/bundle.js"></script>
 
 </body>
