Refactor modal.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Mithril Lightining</h1>
 
 <script src="http://localhost:8001/mithril.js"></script>
-<script src="dist/bundle.js"></script>
+<script src="dist/bundle.min.js"></script>
 
 </body>
 </html>
